npr/podinfo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  template:
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo:6.9.4
        command:
        - ./podinfo
        - --port=9898
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 128Mi
