npr/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9898
